@@ -2,6 +2,10 @@
   ChangeLog for the eggleton-tools repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
     
+    64: AstroFloyd, 01/04/2010
+     - remove string length from findfile(s)(), quit_program()
+     - plotplt: plot x on log scale iso log(x)
+         
     62: AstroFloyd, 02/03/2010
      - plotpltn: plot x on log scale iso log(x)
      - read some more environment variables
